--- a/package.json
+++ b/package.json
@@ -19,15 +19,20 @@
     "todoist-ai": "./dist/index.js"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.67.0",
+    "@types/yargs": "^17.0.33",
+    "axios": "^1.12.2",
     "chalk": "^5.3.0",
     "conf": "^12.0.0",
+    "dotenv": "^17.2.3",
     "figures": "^6.0.1",
     "gradient-string": "^2.0.2",
     "ink": "^4.4.1",
     "ink-big-text": "^2.0.0",
     "ink-progress-bar": "^3.0.0",
     "ink-spinner": "^5.0.0",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "yargs": "^18.0.0"
   },
   "devDependencies": {
     "@types/gradient-string": "^1.1.5",
