--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.67.0",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/yargs": "^17.0.33",
     "axios": "^1.12.2",
+    "better-sqlite3": "^12.4.1",
     "chalk": "^5.3.0",
     "conf": "^12.0.0",
     "dotenv": "^17.2.3",
@@ -31,6 +33,7 @@
     "ink-big-text": "^2.0.0",
     "ink-progress-bar": "^3.0.0",
     "ink-spinner": "^5.0.0",
+    "ink-table": "^3.1.0",
     "react": "^18.2.0",
     "yargs": "^18.0.0"
   },
