--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     "dotenv": "^17.2.3",
     "figures": "^6.0.1",
     "gradient-string": "^2.0.2",
-    "ink": "^4.4.1",
+    "ink": "^5.2.1",
     "ink-big-text": "^2.0.0",
     "ink-progress-bar": "^3.0.0",
     "ink-spinner": "^5.0.0",
     "ink-table": "^3.1.0",
+    "ink-text-input": "^6.0.0",
     "react": "^18.2.0",
     "yargs": "^18.0.0"
   },
@@ -47,7 +48,7 @@
     "eslint": "^8.55.0",
     "ink-testing-library": "^3.0.0",
     "jest": "^29.7.0",
-    "tsx": "^4.6.0",
+    "tsx": "^4.20.6",
     "typescript": "^5.3.0"
   },
   "keywords": [
