--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.67.0",
+    "@anthropic-ai/tokenizer": "^0.0.4",
     "@types/better-sqlite3": "^7.6.13",
     "@types/yargs": "^17.0.33",
     "axios": "^1.12.2",
@@ -36,6 +37,7 @@
     "ink-table": "^3.1.0",
     "ink-text-input": "^6.0.0",
     "react": "^18.2.0",
+    "tiktoken": "^1.0.22",
     "yargs": "^18.0.0"
   },
   "devDependencies": {
@@ -48,6 +50,7 @@
     "eslint": "^8.55.0",
     "ink-testing-library": "^3.0.0",
     "jest": "^29.7.0",
+    "ts-jest": "^29.4.5",
     "tsx": "^4.20.6",
     "typescript": "^5.3.0"
   },
