feat: rebrand from todoist-ai-cli to taskmate-cli
- Updated package.json with new name and description
- Modified README.md and documentation
- Updated UI components (SplashScreen, LoadingIndicator)
- Generalized prompt templates
- Added migration guide for existing users
- Configured Jest for ESM support
- Added comprehensive test suites for UI components
- Updated configuration files (tsconfig, jest.config)
- Renamed database directory and references
- Updated environment variables and examples

BREAKING CHANGE: Command changed from 'todoist-ai' to 'taskmate'

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # =============================================================================
-# Todoist AI CLI Configuration
+# TaskMate CLI Configuration
 # =============================================================================
 
 # -----------------------------------------------------------------------------
@@ -81,7 +81,7 @@ DATA_DIR=data
 # Log directory
 LOG_DIR=logs
 
-# Configuration directory (defaults to ~/.todoist-ai-cli)
+# Configuration directory (defaults to ~/.taskmate-cli)
 # CONFIG_DIR=/path/to/custom/config
 
 # -----------------------------------------------------------------------------
