--- a/package.json
+++ b/package.json
@@ -1,19 +1,36 @@
 {
   "name": "taskmate-cli",
   "version": "0.1.0",
-  "description": "AI-powered CLI for intelligent task management",
+  "description": "AI-powered CLI for intelligent task management with Claude and Gemini integration",
   "main": "dist/index.js",
   "type": "module",
   "engines": {
     "node": ">=18.0.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mariomosca/taskmate-cli.git"
+  },
+  "homepage": "https://github.com/mariomosca/taskmate-cli#readme",
+  "bugs": {
+    "url": "https://github.com/mariomosca/taskmate-cli/issues"
+  },
+  "files": [
+    "dist/**/*",
+    "README.md",
+    "LICENSE",
+    "CHANGELOG.md"
+  ],
   "scripts": {
     "dev": "tsx src/index.tsx",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "jest",
     "lint": "eslint src/**/*.{ts,tsx}",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "prepublishOnly": "npm run test && npm run build",
+    "version": "npm run build",
+    "postversion": "git push && git push --tags"
   },
   "bin": {
     "taskmate": "./dist/index.js"
@@ -61,8 +78,21 @@
     "productivity",
     "task-management",
     "assistant",
-    "automation"
+    "automation",
+    "claude",
+    "gemini",
+    "llm",
+    "todoist",
+    "terminal",
+    "command-line"
   ],
-  "author": "Mario Mosca",
-  "license": "MIT"
+  "author": {
+    "name": "Mario Mosca",
+    "email": "mario.mosca@example.com"
+  },
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
+  "preferGlobal": true
 }
