--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dev": "tsx src/index.tsx",
     "build": "tsc",
     "start": "node dist/index.js",
+    "cli": "tsx src/index.tsx",
     "test": "jest",
     "lint": "eslint src/**/*.{ts,tsx}",
     "type-check": "tsc --noEmit",
